--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <!-- Paste BOTH strings as required -->
     <string name="back4app_app_id">Tkn2lfdiilzDmkRbhYn4B7hc1g7syyXwvDFkdpjy</string>
     <string name="back4app_client_key">yrzFya7AwbWqnfg52c7VqS1u1mZEYMstQ5ZSnPyd</string>
+    <string name="home">Home</string>
+    <string name="compose">Compose</string>
+    <string name="profile">Profile</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
